infra/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: healthcare-platform
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: healthcare-exchange-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: apiport
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: healthcare-platform
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
