infra/k8s/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: healthcare-platform
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.13.3
          ports:
            - containerPort: 8200
              name: vaultport
          securityContext:
            capabilities:
              add: ["IPC_LOCK"]
---
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: healthcare-platform
spec:
  ports:
    - port: 8200
      targetPort: 8200
  selector:
    app: vault
